[package]
name = "nestgate-canonical"
version = "0.1.0"
edition = "2024"
authors = ["ecoPrimals Collective"]
description = "Canonical modernization patterns and unified interfaces for NestGate"
repository = "https://github.com/ecoprimals/nestgate"
license = "AGPL-3.0-only"
keywords = ["canonical", "modernization", "patterns", "unification", "architecture"]
categories = ["development-tools", "api-bindings", "asynchronous"]
homepage = "https://ecoprimals.org"

[lints]
workspace = true

[dependencies]
nestgate-core = { path = "../nestgate-core", default-features = false }

serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
etcetera = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

[features]
default = ["unified-config", "zero-cost-patterns"]
unified-config = []
zero-cost-patterns = []
simd-integration = []
performance-monitoring = []
