[package]
name = "nestgate-config"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Configuration, constants, and defaults for the NestGate ecosystem"
repository = "https://github.com/ecoprimals/nestgate"

[lints]
workspace = true

[dependencies]
nestgate-types = { path = "../nestgate-types" }

anyhow = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
rustix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
nestgate-platform = { path = "../nestgate-platform" }
serial_test = { workspace = true }
temp-env = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
dev-stubs = []
