[package]
name = "nestgate-core"
version = "0.1.0"
edition = "2024"
authors = ["ecoPrimals Collective"]
description = "Core functionality and canonical patterns for the NestGate storage management system"
repository = "https://github.com/ecoprimals/nestgate"
license = "AGPL-3.0-only"
keywords = ["storage", "zfs", "nas", "management", "canonical"]
categories = ["filesystem", "network-programming", "asynchronous"]
homepage = "https://ecoprimals.org"

[lints]
workspace = true

[dependencies]
# Internal crates
nestgate-types = { path = "../nestgate-types" }
nestgate-config = { path = "../nestgate-config" }
nestgate-storage = { path = "../nestgate-storage" }
nestgate-rpc = { path = "../nestgate-rpc" }
nestgate-discovery = { path = "../nestgate-discovery" }
nestgate-security = { path = "../nestgate-security" }
nestgate-platform = { path = "../nestgate-platform" }
nestgate-observe = { path = "../nestgate-observe", default-features = false }
nestgate-cache = { path = "../nestgate-cache" }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP
axum = { workspace = true }

# Time and identifiers
chrono = { workspace = true }
uuid = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }

# Configuration
toml = { workspace = true }
config = { workspace = true }
regex = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# Concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }
lru = { workspace = true }

# Zero-copy
bytes = { workspace = true }
url = { workspace = true }

# Encoding, hashing, and RNG
base64 = { workspace = true }
hex = { workspace = true }
urlencoding = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true }

# System utilities
tempfile = { workspace = true }
fastrand = { workspace = true }

# RPC
tarpc = { workspace = true, features = ["tokio1", "serde-transport", "serde1", "tcp"] }
tokio-serde = { workspace = true, features = ["bincode"] }
bincode = { workspace = true }
jsonrpsee = { workspace = true }
pin-project = { workspace = true }

# Non-Linux: enable sysinfo fallback in nestgate-observe metrics (Linux uses pure-Rust `/proc` only).
[target.'cfg(not(target_os = "linux"))'.dependencies]
nestgate-observe = { path = "../nestgate-observe", features = ["sysinfo"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }
serial_test = { workspace = true }
temp-env = { workspace = true }
mockall = { workspace = true }

[[bench]]
name = "performance_validation"
harness = false

[[bench]]
name = "comprehensive_reality_check"
harness = false

[[bench]]
name = "working_performance_benchmark"
harness = false

[features]
default = []
# Development stubs - include mock/stub implementations for testing
dev-stubs = ["nestgate-config/dev-stubs", "nestgate-rpc/dev-stubs"]
# Mock metrics for testing without real system metrics
mock-metrics = []
