[package]
name = "nestgate-discovery"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Primal discovery, capability resolution, and service registry for NestGate"
repository = "https://github.com/ecoprimals/nestgate"

[lints]
workspace = true

[dependencies]
nestgate-types = { path = "../nestgate-types" }
nestgate-config = { path = "../nestgate-config" }
nestgate-rpc = { path = "../nestgate-rpc" }

anyhow = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
nestgate-platform = { path = "../nestgate-platform" }
serial_test = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }
temp-env = { workspace = true }

[features]
default = []
dev-stubs = []
