[package]
name = "nestgate-fsmonitor"
version = "0.9.2"
edition = "2021"
description = "File system monitoring for NestGate"
license = "AGPL-3.0-or-later"

[dependencies]
nestgate-core = { path = "../nestgate-core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
notify = "6.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.0"

[dev-dependencies]
tokio-test = { workspace = true } 