[package]
name = "nestgate-fsmonitor"
version = "0.9.2"
edition = "2021"
description = "File system monitoring for NestGate"
license = "AGPL-3.0-only"
repository = "https://github.com/eastgate/nestgate"
readme = "README.md"
keywords = [ "filesystem", "monitoring", "rust", "nestgate",]
categories = [ "filesystem", "monitoring",]

[dependencies]
notify = "6.1"
futures = "0.3"
num_cpus = "1.16"

[dependencies.nestgate-core]
path = "../nestgate-core"

[dependencies.tokio]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.chrono]
version = "0.4"
features = [ "serde",]

[dev-dependencies.tokio-test]
workspace = true
