[package]
name = "nestgate-fsmonitor"
version = "0.9.2"
edition = "2024"
description = "File system monitoring for NestGate"
license = "AGPL-3.0-only"
repository = "https://github.com/ecoprimals/nestgate"
keywords = ["filesystem", "monitoring", "rust", "nestgate"]
categories = ["filesystem", "monitoring"]

[lints]
workspace = true

[dependencies]
nestgate-core = { path = "../nestgate-core" }

notify = "6.1"
futures = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
