[[bin]]
name = "nestgate-installer"
path = "src/main.rs"

[package]
name = "nestgate-installer"
version = "0.1.0"
edition = "2024"
description = "NestGate Installation and Configuration Tool"
authors = [ "NestGate Team",]
license = "AGPL-3.0-only"
repository = "https://github.com/eastgate/nestgate"
readme = "README.md"
keywords = [ "installer", "deployment", "rust", "nestgate",]
categories = [ "development-tools", "deployment",]

[lints]
workspace = true

[lib]
name = "nestgate_installer"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
etcetera = "0.8"
tempfile = "3.8"
# tar, flate2, zip, indicatif removed: unused dependencies
# sysinfo: non-Linux + Linux fallbacks; evolution path is Linux `/proc` + rustix (ecoBin v3.0); full removal needs feature-gating across consumers.
sysinfo = "0.30"
console = "0.15"
tracing = "0.1"
futures-util = "0.3"

[features]
default = [ "cli",]
cli = []

[dependencies.tokio]
version = "1.0"
features = [ "full",]

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.clap]
version = "4.0"
features = [ "derive",]

[dependencies.chrono]
version = "0.4"
features = [ "serde",]

[dependencies.uuid]
version = "1.6"
features = [ "v4",]

[dependencies.nestgate-core]
path = "../nestgate-core"

# Optional HTTP for release downloads (installer UX); core services remain HTTP-free.
[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.dialoguer]
version = "0.11"
features = [ "completion",]

[dependencies.tracing-subscriber]
version = "0.3"
features = [ "env-filter",]

[target."cfg(windows)".dependencies]
winreg = "0.52"
windows-service = "0.6"

[target."cfg(windows)".dependencies.winapi]
version = "0.3"
features = [ "winuser", "winsvc",]

[target."cfg(unix)".dependencies.nix]
version = "0.27"
features = [ "user",]
