[[bin]]
name = "nestgate-installer"
path = "src/main.rs"

[package]
name = "nestgate-installer"
version = "0.1.0"
edition = "2024"
description = "NestGate Installation and Configuration Tool"
authors = ["ecoPrimals Collective"]
license = "AGPL-3.0-only"
repository = "https://github.com/ecoprimals/nestgate"
keywords = ["installer", "deployment", "rust", "nestgate"]
categories = ["development-tools", "deployment"]

[lints]
workspace = true

[lib]
name = "nestgate_installer"
path = "src/lib.rs"

[dependencies]
nestgate-core = { path = "../nestgate-core" }

serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
etcetera = { workspace = true }
tempfile = { workspace = true }
sysinfo = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
console = "0.15"
# TLS: delegated to system curl (download.rs) — eliminates ring/rustls/reqwest C deps.
# BearDog provides pure-Rust crypto for the ecosystem; the installer runs before the
# ecosystem is available, so it uses the system TLS stack via curl.
dialoguer = { version = "0.11", features = ["completion"] }

[features]
default = ["cli"]
cli = []

[target."cfg(windows)".dependencies]
winreg = "0.52"
windows-service = "0.6"

[target."cfg(windows)".dependencies.winapi]
version = "0.3"
features = ["winuser", "winsvc"]

[target."cfg(unix)".dependencies.nix]
version = "0.27"
features = ["user"]
