[[bin]]
name = "nestgate-installer"
path = "src/main.rs"

[package]
name = "nestgate-installer"
version = "0.1.0"
edition = "2024"
description = "NestGate Installation and Configuration Tool"
authors = ["ecoPrimals Collective"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/ecoprimals/nestgate"
keywords = ["installer", "deployment", "rust", "nestgate"]
categories = ["development-tools", "deployment"]

[lints]
workspace = true

[lib]
name = "nestgate_installer"
path = "src/lib.rs"

[dependencies]
nestgate-core = { path = "../nestgate-core" }
nestgate-types = { path = "../nestgate-types" }

serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
etcetera = { workspace = true }
tempfile = { workspace = true }
# ecoBin v3: sysinfo is unused — remove when confirmed. Linux uses /proc.
# sysinfo = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
console = "0.15"
# TLS: delegated to system curl (download.rs) — eliminates ring/rustls/reqwest C deps.
# BearDog provides pure-Rust crypto for the ecosystem; the installer runs before the
# ecosystem is available, so it uses the system TLS stack via curl.
dialoguer = { version = "0.11", features = ["completion"] }

[features]
default = ["cli"]
cli = []

[dev-dependencies]
temp-env = { workspace = true }
