[package]
name = "nestgate-mcp"
version = "0.1.0"
edition = "2021"
authors = [ "NestGate Team",]
description = "Enhanced MCP protocol integration for NestGate v2 with enhanced NestGate capabilities"
license = "AGPL-3.0-only"
repository = "https://github.com/ecoPrimals/NestGateV2"
readme = "README.md"
keywords = [ "mcp", "protocol", "messaging", "rust", "nestgate",]
categories = [ "network-programming", "protocols",]

[dependencies]
gethostname = "0.4"
fastrand = "2.0"
rand = "0.8"
sha2 = "0.10"

[features]
default = []
metrics = []
security = []
federation = []
full = [ "metrics", "security", "federation",]

[dev-dependencies]
tokio-test = "0.4"

[dependencies.tokio]
workspace = true
features = [ "full",]

[dependencies.futures]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.serde]
workspace = true
features = [ "derive",]

[dependencies.serde_json]
workspace = true

# serde_yaml removed: unused dependency (deprecated crate eliminated)

[dependencies.tracing]
workspace = true

[dependencies.tracing-subscriber]
workspace = true
features = [ "env-filter",]

[dependencies.dashmap]
workspace = true

[dependencies.uuid]
workspace = true
features = [ "v4", "serde",]

[dependencies.chrono]
workspace = true
features = [ "serde",]

[dependencies.thiserror]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.nestgate-core]
path = "../nestgate-core"

[dependencies.sysinfo]
workspace = true

# indexmap removed: unused dependency
# reqwest removed (BiomeOS Pure Rust Evolution) - removed "json" feature

[dependencies.config]
workspace = true
