[package]
name = "nestgate-mcp"
version = "0.1.0"
edition = "2024"
authors = ["ecoPrimals Collective"]
description = "Enhanced MCP protocol integration for NestGate with enhanced capabilities"
license = "AGPL-3.0-only"
repository = "https://github.com/ecoprimals/nestgate"
keywords = ["mcp", "protocol", "messaging", "rust", "nestgate"]
categories = ["network-programming", "protocols"]

[lints]
workspace = true

[dependencies]
nestgate-core = { path = "../nestgate-core" }

gethostname = { workspace = true }
fastrand = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sysinfo = { workspace = true }
config = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = []
metrics = []
security = []
federation = []
full = ["metrics", "security", "federation"]
