[package]
name = "nestgate-middleware"
version = "0.9.2"
edition = "2021"
authors = [ "DataScienceBioLab",]
description = "Middleware components for NestGate NAS system"
license = "AGPL-3.0-only"
repository = "https://github.com/DataScienceBioLab/nestgate"
keywords = [ "middleware", "nas", "storage",]
readme = "README.md"
categories = [ "web-programming", "middleware",]

[dependencies]
num_cpus = "1.16"

[dev-dependencies]
mockall = "0.11"

[dependencies.nestgate-core]
path = "../nestgate-core"

[dependencies.tokio]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.anyhow]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dev-dependencies.tokio-test]
workspace = true
