[package]
name = "nestgate-nas"
version = "0.9.2"
edition = "2021"
description = "NAS functionality for NestGate"
license = "AGPL-3.0-or-later"

[dependencies]
nestgate-core = { path = "../nestgate-core" }
nestgate-network = { path = "../nestgate-network" }

tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
serde_json = "1.0"
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0" 