[package]
name = "nestgate-nas"
version = "0.9.2"
edition = "2021"
description = "NAS functionality for NestGate"
license = "AGPL-3.0-only"
repository = "https://github.com/eastgate/nestgate"
readme = "README.md"
keywords = [ "rust", "nestgate", "core", "async",]
categories = [ "development-tools",]

[dependencies]
tracing = "0.1"
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[dependencies.nestgate-core]
path = "../nestgate-core"

[dependencies.nestgate-network]
path = "../nestgate-network"

[dependencies.tokio]
version = "1.0"
features = [ "full",]

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.thiserror]
workspace = true

[dependencies.anyhow]
workspace = true
