[package]
name = "nestgate-nas"
version = "0.9.2"
edition = "2024"
description = "NAS functionality for NestGate"
license = "AGPL-3.0-only"
repository = "https://github.com/ecoprimals/nestgate"
keywords = ["rust", "nestgate", "core", "async"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
nestgate-core = { path = "../nestgate-core" }
nestgate-network = { path = "../nestgate-network" }

tracing = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
