[package]
name = "nestgate-network"
version = "0.1.0"
edition = "2024"
description = "Network protocols and communication for NestGate"
license = "AGPL-3.0-only"
repository = "https://github.com/ecoprimals/nestgate"
keywords = ["networking", "async", "rust", "nestgate"]
categories = ["network-programming", "asynchronous"]

[lints]
workspace = true

[dependencies]
nestgate-core = { path = "../nestgate-core" }

anyhow = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tungstenite = { workspace = true }
async-stream = { workspace = true }
rand = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
ipnetwork = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
