[package]
name = "nestgate-network"
version = "0.1.0"
edition = "2024"
description = "Network protocols and communication for NestGate"
license = "AGPL-3.0-only"
repository = "https://github.com/ecoprimals/nestgate"
keywords = ["networking", "async", "rust", "nestgate"]
categories = ["network-programming", "asynchronous"]

[lints]
workspace = true

[dependencies]
nestgate-core = { path = "../nestgate-core" }

axum = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
