[package]
name = "nestgate-observe"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Observability, diagnostics, and event system for NestGate"
repository = "https://github.com/ecoprimals/nestgate"

[lints]
workspace = true

[dependencies]
nestgate-types = { path = "../nestgate-types" }
nestgate-config = { path = "../nestgate-config" }
nestgate-platform = { path = "../nestgate-platform" }

uuid = { workspace = true, features = ["v4"] }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# sysinfo fallback for metrics on non-Linux
sysinfo = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["sysinfo"]
sysinfo = ["dep:sysinfo"]
mock-metrics = []
