[package]
name = "nestgate-observe"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Observability, diagnostics, and event system for NestGate"
repository = "https://github.com/ecoprimals/nestgate"

[lints]
workspace = true

[dependencies]
nestgate-types = { path = "../nestgate-types" }
nestgate-config = { path = "../nestgate-config" }
nestgate-platform = { path = "../nestgate-platform" }

uuid = { workspace = true, features = ["v4"] }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# sysinfo: fallback for `gather_system_metrics` on non-Linux (or when `/proc` fails). Linux uses
# `nestgate_platform::linux_proc` only — enable with `--features sysinfo` on macOS/Windows.
sysinfo = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
sysinfo = ["dep:sysinfo"]
mock-metrics = []
