[package]
name = "nestgate-orchestrator"
version = "0.9.2"
edition = "2021"
authors = ["DataScienceBioLab"]
description = "Central connectivity hub and service orchestrator for NestGate NAS system"
license = "MIT"
repository = "https://github.com/DataScienceBioLab/nestgate"
keywords = ["orchestrator", "connectivity", "nas", "storage"]

[dependencies]
# Internal crates
nestgate-core = { path = "../nestgate-core" }
nestgate-mcp = { path = "../nestgate-mcp" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Time handling
chrono = { workspace = true }

# Network
reqwest = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Utilities
uuid = { workspace = true }
dashmap = { workspace = true }

# Graph processing for service dependencies
petgraph = "0.6"

# Additional dependencies for orchestrator functionality
indexmap = { workspace = true }
gethostname = "0.4"

[dev-dependencies]
tokio-test = { workspace = true }
mockall = "0.11"