[package]
name = "nestgate-performance"
version = "0.1.0"
edition = "2024"
authors = [ "NestGate Team",]
description = "Advanced performance optimization modules for NestGate - SIMD, zero-copy networking, lock-free structures, and adaptive optimization"
license = "AGPL-3.0-only"
repository = "https://github.com/nestgate/nestgate"
keywords = [ "performance", "simd", "zero-copy", "lock-free", "optimization",]
categories = [ "performance", "concurrency", "network-programming",]
readme = "README.md"

[lints]
workspace = true

[dependencies]
tracing = "0.1"
# Safe concurrent collections - ZERO unsafe code
crossbeam = "0.8"
dashmap = "6.1"

[features]
default = [ "simd", "zero-copy", "lock-free", "adaptive",]
simd = []
zero-copy = []
lock-free = []
adaptive = []
custom-allocators = []

[lib]
name = "nestgate_performance"
path = "src/lib.rs"

[dependencies.nestgate-core]
path = "../nestgate-core"

[dependencies.tokio]
version = "1.0"
features = [ "full",]
