[package]
name = "nestgate-performance"
version = "0.1.0"
edition = "2024"
authors = ["ecoPrimals Collective"]
description = "Advanced performance optimization modules for NestGate - SIMD, zero-copy networking, lock-free structures, and adaptive optimization"
license = "AGPL-3.0-only"
repository = "https://github.com/ecoprimals/nestgate"
keywords = ["performance", "simd", "zero-copy", "lock-free", "optimization"]
categories = ["concurrency", "network-programming"]

[lints]
workspace = true

[lib]
name = "nestgate_performance"
path = "src/lib.rs"

[dependencies]
nestgate-core = { path = "../nestgate-core" }

tracing = { workspace = true }
crossbeam = "0.8"
dashmap = { workspace = true }
tokio = { workspace = true }

[features]
default = ["simd", "zero-copy", "lock-free", "adaptive"]
simd = []
zero-copy = []
lock-free = []
adaptive = []
custom-allocators = []
