[package]
name = "nestgate-platform"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "Platform-specific utilities, environment handling, and system metrics for NestGate"
repository = "https://github.com/ecoprimals/nestgate"

[lints]
workspace = true

[dependencies]
rustix = { workspace = true }
uzers = { workspace = true }
gethostname = { workspace = true }
etcetera = { workspace = true }

# sysinfo: non-Linux fallback for physical CPU count
sysinfo = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = ["sysinfo"]
sysinfo = ["dep:sysinfo"]
