[package]
name = "nestgate-platform"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Platform-specific utilities, environment handling, and system metrics for NestGate"
repository = "https://github.com/ecoprimals/nestgate"

[lints]
workspace = true

[dependencies]
nestgate-env-process-shim = { path = "../nestgate-env-process-shim" }
rustix = { workspace = true }
# uzers removed — replaced by rustix::process::getuid/getgid (already in dep tree)
etcetera = { workspace = true }
tracing = { workspace = true }

# sysinfo: optional fallback in `linux_proc::physical_cpu_count` on non-Linux (Linux uses `/proc`).
sysinfo = { workspace = true, optional = true }

[dev-dependencies]
temp-env = { workspace = true }
tokio-test = { workspace = true }

[features]
default = []
sysinfo = ["dep:sysinfo"]
